@@ -1,3 +1,8 @@
+2005-07-31 10:57 Gregory John Casamento <greg_casamento@yahoo.com>
+
+	* GormCore/GormInspectorsManager.m: [GormConnectionsInspector ok:]
+	Removed code which blanks out the connector.
+
 2005-07-31 08:43 Gregory John Casamento <greg_casamento@yahoo.com>
 
 	* GormCore/GormPrivate.m: Reverted previous change in init.
